--- a/inventory/invent_style.css
+++ b/inventory/invent_style.css
@@ -91,8 +91,8 @@
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  width: 35%;
-  margin: 2% auto;
+  width: flex;
+  position: relative;
 }
 
 .overlay-content h3 {
@@ -895,10 +895,14 @@ td {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%; /* Set the width you desire */
-  height: 100%;
+  height: 90%;
+  max-width: 560px; /* Limit maximum width for larger screens */
+  max-height: 610px; /* Limit maximum height for larger screens */
   border: 1px solid #ddd;
   padding: 20px;
+  background-color: #fff; /* Add a background color for readability */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+  z-index: 600;
   overflow: hidden; /* Prevent scrolling */
 }
 
@@ -934,7 +938,7 @@ td {
   outline: none; /* No outline on focus */
   position: absolute; /* Positioning below the input */
   z-index: 999; /* Ensure it appears above other elements */
-  width: 81.5%; /* Full width */
+  width: 100%; /* Full width */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow for depth */
   text-align: left; /* Align text to the left */
 }
@@ -972,7 +976,7 @@ td {
   outline: none; /* No outline on focus */
   position: absolute; /* Positioning below the input */
   z-index: 999; /* Ensure it appears above other elements */
-  width: 81.5%; /* Full width */
+  width: 100%; /* Full width */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow for depth */
   text-align: left; /* Align text to the left */
 }
@@ -1056,12 +1060,12 @@ textarea {
 }
 .add
 {
-  background-color: #5d7e5e; /* Green color for confirm button */
+  background-color: #4CAF50; /* Green color for confirm button */
   color: #fff; /* White text color */
 }
 .sub
 {
-  background-color: #816666; /* Red color for cancel button */
+  background-color: #af4c4c; /* Red color for cancel button */
   color: #fff; /* White text color */
 }
 
