--- a/inventory/invent_style.css
+++ b/inventory/invent_style.css
@@ -40,6 +40,7 @@
 }
 
 .modal-content {
+  
   background-color: #fefefe;
   margin: 7% auto; /* 15% from the top and centered */
   padding: 20px;
@@ -47,6 +48,7 @@
   width: 70%; /* Could be more or less, depending on screen size */
   z-index: 1000;
 }
+
 /* Overlay styles */
 .overlay {
   position: fixed;
@@ -64,6 +66,7 @@
   /* High z-index value to ensure it's on top */
   
 }
+
 
 #overlayAD {
   position: fixed; /* Position overlay fixed to the viewport */
@@ -123,6 +126,16 @@
   margin-bottom: 10px;
   margin-left: 12px;
 }
+
+.closeAlert
+{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 
 #checkLowStockButton {
   cursor: pointer;
@@ -1116,5 +1129,25 @@ textarea {
 
 .submit:hover {
   background-color: #45a049; /* Darker green on hover */
+}
+
+
+#modalSelect {
+  width: 230px; /* Full width */
+  height: auto; /* Adjust height to auto for better fitting */
+  font-size: 25px; /* Increased font size for better visibility */
+  
+  flex: 1; /* Flexibility for responsiveness */
+  -moz-box-sizing: content-box; /* For Firefox */
+  -webkit-box-sizing: content-box; /* For Safari */
+  box-sizing: content-box; /* Default box-sizing */
+  padding-left: 12px; /* Left padding */
+  padding-right: 12px; /* Right padding */
+  background: transparent; /* Make the background transparent */
+  border-radius: 4px; /* Rounded corners */
+  border-width: 0px; /* No border */
+  outline: none; /* No outline on focus */
+
+  text-align: left; 
 }
 
